# DeepFold-Hyperplonk-Gurily

./: .gitignore
arithmetic/: Cargo.toml
arithmetic/benches/: field_benchmark.rs
arithmetic/src/: field.rs
arithmetic/src/field/: goldilocks64.rs
arithmetic/src/field/babybear/: babybear.rs  extension.rs  mod.rs  monty.rs
arithmetic/src/field/babybear/simd/: avx2.rs  avx512.rs  fallback.rs  mod.rs  neon.rs
docs/: BABYBEAR_SIMD_MIGRATION_PLAN.md  BENCHMARK_ANALYSIS_2026-02-01.md  BENCHMARK_GUIDE.md  STAGE_TECH_REPORT_2026-02-01.md  TECHNICAL_ANALYSIS.md
hyperplonk/: Cargo.toml
hyperplonk/benches/: basefold.rs  deepfold.rs  detailed_benchmark.rs  piop.rs
hyperplonk/src/: lib.rs  prod_eq_check.rs  prover.rs  sumcheck.rs  verifier.rs
poly_commit/: Cargo.toml
poly_commit/src/: basefold.rs  deepfold.rs  lib.rs  nil.rs  shuffle.rs
