[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["babybear", "simd"]
babybear = ["arithmetic/babybear", "poly_commit/babybear"]
goldilocks = ["arithmetic/goldilocks", "poly_commit/goldilocks"]
simd = ["arithmetic/simd", "poly_commit/simd"]
avx2 = ["arithmetic/avx2", "poly_commit/avx2", "simd"]
avx512 = ["arithmetic/avx512", "poly_commit/avx512", "simd"]
neon = ["arithmetic/neon", "poly_commit/neon", "simd"]

[dependencies]
arithmetic = { path = "../arithmetic" }
poly_commit = { path = "../poly_commit" }
util = { path = "../util" }
rand = "0.8.5"
csv = "1.3.0"

[[bench]]
name = "deepfold"
harness = false

[[bench]]
name = "basefold"
harness = false


[[bench]]
name = "piop"
harness = false

[[bench]]
name = "detailed_benchmark"
harness = false

