[package]
name = "poly_commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["babybear", "simd"]
babybear = ["arithmetic/babybear"]
goldilocks = ["arithmetic/goldilocks"]
simd = ["arithmetic/simd"]
avx2 = ["arithmetic/avx2", "simd"]
avx512 = ["arithmetic/avx512", "simd"]
neon = ["arithmetic/neon", "simd"]

[dependencies]
arithmetic = { path = "../arithmetic" }
util = { path = "../util" }
rand = "0.8.5"
rs_merkle = "1.3"
ark-ec = "0.4"
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-poly = { version = "^0.4.0", default-features = false }
csv = "1.3.0"
hp = { git = "https://github.com/EspressoSystems/hyperplonk.git", package = "subroutines" }

[[bench]]
name = "deepfold"
harness = false

[[bench]]
name = "kzg"
harness = false

